Fix collapsed menu
Fixed location of burger and added dropdown functionality to menu at mobile size. Still need to make it collapse on click not hover. Fixed alignment issues with main menu, changing grid from pixels to %

--- a/styles/global-styles.css
+++ b/styles/global-styles.css
@@ -12,7 +12,7 @@ body {
 
 	margin: 0px;
 	display: grid;
-	grid-template-columns: 200px 200px 200px 200px 200px;
+	grid-template-columns: 20% 20% 20% 20% 20%;
 	align-items: stretch;
 	justify-content: center;
 	background: linear-gradient(to right, rgba(47,47,47,.8) , rgba(47,47,47,.9), rgba(47,47,47,1), #3f3f3f, rgba(47,47,47,1), rgba(47,47,47,.9), rgba(47,47,47,.8));
@@ -30,7 +30,7 @@ body {
 	overflow: hidden;
 	position: absolute;
 	background-color: grey;
-	width: 195px;	
+	width: 19.7%;	
 	z-index: 1;
 	border-right: 3px solid #b999c8;
 	border-left: 3px solid #b999c8;
@@ -57,18 +57,17 @@ body {
 	background: linear-gradient(to right, rgba(47,47,47,1) , rgba(47,47,47,1), rgba(47,47,47,1), #3f3f3f, rgba(47,47,47,1), rgba(47,47,47,1), rgba(47,47,47,1));
 }
 
-.collapse-content a:hover{
-	background: linear-gradient(to right, rgba(47,47,47,1) , rgba(47,47,47,1), rgba(47,47,47,1), #3f3f3f, rgba(47,47,47,1), rgba(47,47,47,1), rgba(47,47,47,1));
-}
-
 #dropdown:hover .dropdown-content {
 	height: 130px;
 	border-bottom: 3px solid #b999c8;
 }
 
 #collapse-drop:hover .dropdown-content {
-	display: inline-flex;
+	height: 210px;
+	border-bottom: 3px solid #b999c8;
 }
+
+
 
 .dropdown-content a{
 	flex:;
@@ -86,15 +85,11 @@ body {
 }
 
 
-
 /*MENU COLLAPSE*/
 
 
 .container {
     display: none;
-    cursor: pointer;
-    margin-right: 25px;
-    margin-top: 10px;
 }
 
 .bar1, .bar2, .bar3 {
@@ -127,12 +122,37 @@ body {
 		display: none;
 	}
 	.container {
-		display: inline-block;
+		display: block;
 		cursor: pointer;
-		margin-right: auto;
-		margin-left: auto;
+		margin-right: 50%;
+		margin-left: 50%;
 		margin-top: 10px;
 		margin-bottom: 10px;
+	}
+	.dropdown-content {
+	height: 0px;
+	overflow: hidden;
+	position: absolute;
+	background-color: rgba(47,47,47,.8);
+	width: 19.7%;	
+	z-index: 1;
+	border-right: 3px solid #b999c8;
+	border-left: 3px solid #b999c8;
+	margin-top: 0px;
+	margin-left: 17px;
+	-webkit-transition: all 0.5s ease-in-out;
+    -moz-transition: all 0.5s ease-in-out;
+    -o-transition: all 0.5s ease-in-out;
+    transition: all 0.5s ease-in-out;
+	}
+	.dropdown-content a{
+	float: none;
+	font-family: 'Open Sans', sans-serif;
+	font-size: 16px;
+	text-decoration: none;
+	color: white;
+	display: block;
+	text-align: center;
 	}
 }
 
